<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/avatars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="42dp" />

        <TextView
            android:id="@+id/txtUsername"
            style="@style/FontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin12"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imgAvatar"
            app:layout_constraintStart_toStartOf="@id/imgAvatar"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
            tools:text="Mojombo" />

        <TextView
            android:id="@+id/txtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/followers"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

        <TextView
            android:id="@+id/txtCountFollowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/txtFollowers"
            app:layout_constraintStart_toStartOf="@id/txtFollowers"
            app:layout_constraintTop_toBottomOf="@id/txtFollowers"
            tools:text="1000" />

        <TextView
            android:id="@+id/txtFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/following"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/txtFollowers" />

        <TextView
            android:id="@+id/txtCountFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/txtFollowing"
            app:layout_constraintStart_toStartOf="@id/txtFollowing"
            app:layout_constraintTop_toBottomOf="@id/txtFollowing"
            tools:text="1000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="330dp" />

        <View
            android:id="@+id/lineLeft"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/detailInformation"
            app:layout_constraintEnd_toStartOf="@id/detailInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detailInformation" />

        <View
            android:id="@+id/lineRight"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/detailInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailInformation"
            app:layout_constraintTop_toTopOf="@id/detailInformation" />

        <TextView
            android:id="@+id/detailInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_information"
            app:layout_constraintEnd_toStartOf="@+id/lineRight"
            app:layout_constraintStart_toEndOf="@+id/lineLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="383dp" />

        <TextView
            android:id="@+id/txtFullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/lineRight"
            app:layout_constraintStart_toStartOf="@+id/lineLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/txtCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/lineRight"
            app:layout_constraintStart_toStartOf="@+id/lineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtFullname" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/lineRight"
            app:layout_constraintStart_toStartOf="@+id/lineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtCompany" />

        <TextView
            android:id="@+id/txtRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/repository"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/lineRight"
            app:layout_constraintStart_toStartOf="@+id/lineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtLocation" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRepository"
            app:tabTextColor="@android:color/black" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>